--- a/JoinDiscovery_Phases.tex
+++ b/JoinDiscovery_Phases.tex
@@ -31,7 +31,7 @@ ME, CSA, IISc Bangalore}
 
 \section{Problem Statement}
 Given two tables, the join discovery problem is to find out all possible ways in which the two tables can be joined to produce significant results. Each way corresponds to a mapping
-of attributes from one table to the other. The strength of a join for a mapping M from table T1 to T2 is the percentage of rows from T1 that join to some row of T2 under the mapping M. We are interested in finding all the mappings that have support greater than a threshold t. This is a very expensive operation since the number of possible mappings is exponential in the number of attributes. Thus, we want to consider sampling techniques for join discovery.
+of attributes from one table to the other. The strength of a join for a mapping M from table T1 to T2 is the percentage of rows from T1 that join to some row of T2 under the mapping M. We are interested in finding all the mappings that have support greater than a threshold t. This is a very expensive operation since the number of possible mappings is large i.e, NumberOfAttributes(T1) * NumberOfAttributes(T2). In this project, we are using several techniques to prune subset of those mappings. Intuition is that after the first 2 phases of pruning, whatever the mappigs that survived are going to be very small to compared to the original set. Throughout the pruning we could employ sampling technques and use those same results to finally order results based on join support.
 
 \section{Proposed Technique}
 Lets say we have two data sets namely Table A(a1,a2,....,am) and Table B(b1,b2,....,bn)
@@ -66,11 +66,14 @@ Collect the following statistics for both relations by a linear scan(sampling ca
 \item Squared sum
 \item Linear sum
 \item Variance
+\item Covariance 
 \item Unique or not
 \item Increasing or Decreasing etc.
 \end{itemize}
 
-   Compare statistics of relations A and B. If a pair is not a join pair, it is likely that above parameter values differ significantly. For example, mean value differs by a huge margin when age attribute of table A is compared with zipcode attribute of table B. How much statistics should differ for eliminating a combination needs to be studied further. For instance, we can assign a weight to each of the above parameter and find the weighted sum $W$. If $W$ is above some threshold, it is a potential join pair. Otherwise we can prune it with high confidence. This weighted sum can also be used along with join support to order the results at later stage.
+
+    We can use \textbf{Pearson product-moment correlation coefficient} to study the relationship between the two attributes, if theres a negative coorealtion we can prune it with high confidence.
+   Other approcahes are also possible. For example, we can compare statistics of relations A and B. If a pair is not a join pair, it is likely that above parameter values differ significantly. For example, mean value differs by a huge margin when age attribute of table A is compared with zipcode attribute of table B. How much statistics should differ for eliminating a combination needs to be studied further. For instance, we can assign a weight to each of the above parameter and find the weighted sum $W$. If $W$ is above some threshold, it is a potential join pair. Otherwise we can prune it with high confidence. This weighted sum can also be used along with join support to order the results at later stage.
    
 \paragraph{String}
 
@@ -102,6 +105,16 @@ Compute sum of support. If it is less than $\alpha$ times ideal sum of support$(
 We muse consolidate the findings of phase 1 and phase 2 and present potential join pairs in support percentage order.
 \section{Experiments}
 
-Hive and Hadoop or postgreSQL. Must have good support for sampling, partitioning. 
+Hive(When partitoned on a column) or PostgreSQL. Has good support for sampling, partitioning. 
+
+In order to evaluate our approach we are comparing our approach with the \textit{oracle's} approach which beforehand knows the support count of all pairs( using full table scan instead of sampling). We are interested in finding the following result.
+
+\begin{itemize}
+
+\item \textbf{How does the sample results correspond to the original results? } How can we ensure that sample has \item \textit{almost} the same probability distribution as that of original data? 
+
+\end{itemize}
+
+
 
 \end{document}
